[Polyam] fix: Fix column header overlapping mobile menu on old Safari
Port e6e89747854e34765b5291fe19fd76bc2d97b26d to polyam-glitch

--- a/app/javascript/flavours/polyam/styles/components/single_column.scss
+++ b/app/javascript/flavours/polyam/styles/components/single_column.scss
@@ -202,6 +202,7 @@ $ui-header-height: 55px;
 .columns-area__panels__pane--overlay {
   pointer-events: auto;
   background: rgba($base-overlay-background, 0.5);
+  z-index: 3;
 
   .columns-area__panels__pane__inner {
     box-shadow: var(--dropdown-shadow);
